--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
 :root {
+    --primary-text-color: #757575;
 
     
+}
+
+body {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+}
+
+.header {
+
 }
